--- a/src/components/Dashboard/ViewPatient.css
+++ b/src/components/Dashboard/ViewPatient.css
@@ -1,6 +1,6 @@
 .view-patient-container {
   max-width: 800px;
-  margin: auto;
+  margin-top: -1%;
   padding: 20px;
 }
 
@@ -46,4 +46,31 @@
 .loading {
   font-style: italic;
   color: gray;
+}
+.search-bar {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.search-input-wrapper {
+  position: relative;
+  width: 300px;
+}
+
+.search-input-wrapper input {
+  width: 100%;
+  padding: 10px 40px 10px 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+.search-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #555;
+  cursor: pointer;
 }
